--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NETFIX</title>
+    <title>AMAZON</title>
     <link rel="icon" href="imagesn/favicon (3).ico">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
